// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthTypeRegistry getSchemaForAuthType() correctly returns schema for auth type definition when defaults are provided 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": Object {
    "apiKey": Object {
      "description": "API Key value",
      "sensitive": true,
      "type": "string",
    },
    "authType": Object {
      "const": "api_key_header",
      "type": "string",
    },
    "headerField": Object {
      "default": "custom-api-key-field",
      "description": "API Key header field",
      "sensitive": true,
      "type": "string",
    },
  },
  "required": Array [
    "headerField",
    "apiKey",
    "authType",
  ],
  "type": "object",
}
`;

exports[`AuthTypeRegistry getSchemaForAuthType() correctly returns schema for auth type definition when only type ID is provided 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": Object {
    "authType": Object {
      "const": "basic",
      "type": "string",
    },
    "password": Object {
      "description": "Password",
      "sensitive": true,
      "type": "string",
    },
    "username": Object {
      "description": "Username",
      "sensitive": true,
      "type": "string",
    },
  },
  "required": Array [
    "username",
    "password",
    "authType",
  ],
  "type": "object",
}
`;

exports[`AuthTypeRegistry getSchemaForAuthType() ignores defaults for key that is not in auth type schema 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": Object {
    "apiKey": Object {
      "description": "API Key value",
      "sensitive": true,
      "type": "string",
    },
    "authType": Object {
      "const": "api_key_header",
      "type": "string",
    },
    "headerField": Object {
      "description": "API Key header field",
      "sensitive": true,
      "type": "string",
    },
  },
  "required": Array [
    "headerField",
    "apiKey",
    "authType",
  ],
  "type": "object",
}
`;
